# grantora

./: .env.example  .gitignore  ADAPTERS.md  AGENTS.md  CONTRACTS.md  Makefile  OPERATIONS.md  PLAN.md  PROJECT.md  README.md  SECURITY.md  STRUCTURE.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  security.yml  tests.yml
containers/: grantora-api-entrypoint.sh  grantora-api.Dockerfile
containers/apisix/: config.yaml  render-and-start.sh
deploy/: compose.production.yml  production.env.example
docs/: ns8-packaging.md  release.md
migrations/: env.py
migrations/versions/: 202605310001_initial_schema.py  202605310002_apisix_integration.py  202605310003_audit_actor_type.py  202605310004_seed_default_permissions.py  202605310005_admin_credentials.py
src/grantora/: config.py  logging.py  main.py  metrics.py  retention.py  tracing.py
src/grantora/adapters/: __init__.py  base.py  http.py  hubspot.py  mock.py  (+4 more)
tests/e2e/: test_backup_restore_smoke.py  test_runtime_through_apisix.py
tests/integration/: conftest.py  test_apisix_admin.py  test_postgres_runtime.py  test_provider_adapter_transports.py
tests/unit/: test_adapters.py  test_admin_apisix_api.py  test_admin_contracts.py  test_admin_dynamic_api.py  test_apisix_client.py  test_apisix_reconciler.py  test_app.py  test_auth_api.py  test_backup_restore_workflow.py  test_container_entrypoint.py  test_demo_workflow.py  test_deployment_config.py  test_health.py  test_models.py  test_release_packaging.py  test_retention.py  test_runtime_capabilities.py  test_tokens.py
(+48 files in other folders)
