[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "grantora"
version = "0.1.0"
description = "Standalone capability gateway for agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Grantora contributors" }
]
dependencies = [
  "alembic>=1.13,<2.0",
  "cryptography>=42.0,<45.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "jsonschema>=4.23,<5.0",
  "prometheus-client>=0.20,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-dotenv>=1.0,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.6,<1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/grantora"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests that require PostgreSQL or APISIX test infrastructure",
  "e2e: tests that require a running Grantora stack through APISIX",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
